# lmwhisper

./: README.md  config.example.toml  pyproject.toml
src/lmwhisper/: __init__.py  main.py  settings.py
src/lmwhisper/core/: audio.py  conversation.py  persistence.py  transcription.py
src/lmwhisper/ui/: cli.py
