[project]
name = "lmwhisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masayoshi Kokuryo", email = "masakoku@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "tomli-w>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
