[project]
name = "lmwhisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masayoshi Kokuryo", email = "masakoku@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.24",
    "typer>=0.12",
    "tomli-w>=1.0",
    "openai-whisper>=20231117",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
